--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 }
 
-/* .main {
+.main {
     position: relative;
     width: 100%;
     height: 100vh;
@@ -12,7 +12,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
-} */
+}
 
 /* .main>img{
     position: absolute;
