--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     top: 20px;
 }
 
-/* .main>.btn-two{
+.main>.btn-two{
     padding: 20px 30px;
     color: white;
     font-weight: bold;
@@ -43,7 +43,7 @@ body {
     position: absolute;
     right: 20px;
     top: 90px;
-} */
+}
 
 /* .main>.btn-one:hover{
     box-shadow: 0px 0px 10px red;
