--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@ body {
     top: 90px;
 }
 
-/* .main>.btn-one:hover{
+.main>.btn-one:hover{
     box-shadow: 0px 0px 10px red;
-} */
+}
 /* 
 .main>.btn-two:hover{
     box-shadow: 0px 0px 10px green;
