Make hover to btn-two.

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 .main>.btn-one:hover{
     box-shadow: 0px 0px 10px red;
 }
-/* 
+
 .main>.btn-two:hover{
     box-shadow: 0px 0px 10px green;
-} */
+}
